Chapter caption external file and alignment issue fixed

--- a/src/sass/components/chapters.scss
+++ b/src/sass/components/chapters.scss
@@ -58,6 +58,7 @@
 .chapters {
   float: left;
   min-width: 20%;
+  max-width: 20%;
 }
  
 .containerBookmarks { 
